--- a/css/style.css
+++ b/css/style.css
@@ -324,20 +324,25 @@ tbody tr:last-child td {
     margin-bottom: 10mm;
   }
 }
-/* Splash Screen */
+
 .splash {
   position: fixed;
   inset: 0;
   background: #000 url("assets/icons/splash-desktop.png") center / contain no-repeat;
   z-index: 9999;
-  opacity: 1;
+  opacity: 0;                 /* WICHTIG */
   transition: opacity 0.6s ease;
 }
 
-/* ausgeblendet */
+.splash.show {
+  opacity: 1;
+}
+
 .splash.fade-out {
   opacity: 0;
+  pointer-events: none;
 }
+
 
 @media (max-width: 768px) {
   .splash {
