--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ tbody tr:last-child td {
 .splash {
   position: fixed;
   inset: 0;
-  background: #000 url("dovizkuru/assets/icons/splash-desktop.png") center / contain no-repeat;
+  background: #000 url("../assets/icons/splash-desktop.png") center / contain no-repeat;
   z-index: 9999;
   opacity: 0;                 /* WICHTIG */
   transition: opacity 0.6s ease;
@@ -346,7 +346,7 @@ tbody tr:last-child td {
 
 @media (max-width: 768px) {
   .splash {
-    background-image: url("dovizkuru/assets/icons/splash-mobile.png");
+    background-image: url("../assets/icons/splash-mobile.png");
   }
 }
 
